--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ LANGUAGE_CODE=pt-br
 TIME_ZONE=America/Fortaleza
 USE_I18N=True
 USE_TZ=True
+ALLOWED_HOSTS=exemplo.com
+CSRF_TRUSTED_ORIGINS=http://exemplo.com,https://exemplo.com
