--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.9.1
+charset-normalizer==3.4.3
 Django==5.2.4
 django-filter==25.1
 djangorestframework==3.16.0
 pillow==11.3.0
 python-decouple==3.8
+qrcode==8.2
+reportlab==4.4.3
 sqlparse==0.5.3
