feat: Adiciona campo contextual 'detalhes_suja' na API de Salas
Este commit aprimora a serialização do modelo 'Sala', substituindo a antiga lista de todos os relatórios de sujeira por um campo condicional e mais inteligente chamado detalhes_suja.

A nova implementação otimiza o payload da API e fornece um contexto mais claro para o cliente.

O campo detalhes_suja agora retorna um objeto com os dados do último relatório (data, observações, reportado por) apenas quando o status da sala é 'Suja'.

Para qualquer outro status ('Limpa', 'Em Limpeza', etc.), o campo retorna null, reduzindo a carga de dados desnecessários.

--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,5 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,visualstudiocode,pycharm+all
 
+/uc8_api_zeladoria*.txt
+/uc8_zeladoria*.txt
