--- a/tests_api/.env.test.sample
+++ b/tests_api/.env.test.sample
@@ -1,7 +1,7 @@
 # URL base da sua API rodando localmente
 API_BASE_URL=http://127.0.0.1:8000
 
-# --- Credenciais dos Usuários de Teste ---
+# Credenciais dos Usuários de Teste
 
 # Usuário com permissões de Administrador (is_staff=True, is_superuser=True)
 TEST_USER_ADMIN_USERNAME=senac
@@ -14,3 +14,7 @@ TEST_USER_ZELADOR_PASSWORD=senha_segura_para_zelador
 # Usuário pertencente ao grupo "Solicitante de Servicos"
 TEST_USER_SOLICITANTE_USERNAME=solicitante_teste
 TEST_USER_SOLICITANTE_PASSWORD=senha_segura_para_solicitante
+
+# Usuário pertencente aos grupos "Zeladoria" e "Solicitante de Servicos"
+TEST_USER_ASSISTENTE_USERNAME=zelador_solicitante_teste
+TEST_USER_ASSISTENTE_PASSWORD=senha_segura_para_zelador_solicitante
